# Spelifierad-bordtennis-TNM094

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  positionCalculator.mlx  vcpkg.json
_MATLAB/: Server.m  audio_Identification_and_Localization.mlx  positionCalc.m  skapaTestImpuls.m  websocketTest.mlx
_MATLAB/Ljuddetektering/: energyPeakDetection.mlx  playNote.m
include/granssnitt/: About.h  MainFrame.h  Settings.h
include/websocket/: websocketClient.h
kod_till_UI/: About.cpp  About.h  MainFrame.cpp  MainFrame.h  Settings.cpp  Settings.h
src/kod_till_UI/: About.cpp  App.cpp  App.h  MainFrame.cpp
src/kod_till_UI/granssnitt/: App.h  MainFrame.h
src/spelmotor/: main.cpp
src/websocket/: websocketClient.cpp
